# pawlette

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  PKGBUILD  PKGBUILD.stable  README.md  README.ru.md  pyproject.toml  ruff.toml  run.py  whitelist-vulture
.github/workflows/: lint.yml  update-aur.yml
example/: README.md
example/themes/catpuccin-mocha/configs/waybar/: config.jsonc
examples/configs/: starship.toml.pawlette
examples/configs/alacritty/themes/: pawlette.toml.pawlette
examples/configs/btop/: btop.conf
examples/configs/btop/themes/: pawlette.theme.pawlette
examples/configs/fish/: config.fish
examples/configs/fish/themes/: pawlette.theme.pawlette
examples/configs/gtk-4.0/: gtk-dark.css.pawlette  gtk.css.pawlette
examples/configs/hyprland/: hyprland.conf  hyprland.conf.pawlette  pawlette.conf.pawlette
examples/configs/kitty/: kitty.conf
examples/configs/kitty/themes/: pawlette.conf.pawlette
examples/configs/meowrch-code-theme/: theme.json.pawlette
examples/configs/mewline/themes/: pawlette.scss.pawlette
examples/configs/micro/: settings.json
examples/configs/micro/colorschemes/: pawlette.micro.pawlette
examples/configs/tg-config/: colors.tdesktop-theme.pawlette  config.toml
examples/configs/zsh/: .zshrc
examples/configs/zsh/themes/: pawlette.zsh.pawlette
examples/plugins/: adw-gtk3-recolor.sh  tela-folder.py  telegram.py
examples/themes/catppuccin-mocha/: colors.toml  meta.toml
examples/themes/gruvbox-dark/: colors.toml  meta.toml
examples/themes/nord/: colors.toml  meta.toml
src/: app.py  config.py  constants.py  scheme.py
src/common/: utils.py
src/enums/: session_type.py
src/errors/: themes.py
src/handlers/: __init__.py  base.py  merge_copy.py  simple_copy.py
src/pawlette/: __init__.py  __main__.py  config.py  constants.py
src/pawlette/cli/: main.py  migration.py
src/pawlette/common/: setup_loguru.py  utils.py
src/pawlette/core/: __init__.py  config.py  git_manager.py  installer.py  manager.py  merge_copy.py  patch_engine.py  selective_manager.py  system_theme_appliers.py  wm_reloader.py  xdg.py
src/pawlette/errors/: themes.py
src/pawlette/extraction/: __init__.py  matugen.py  native.py  palette.py
src/pawlette/plugins/: __init__.py  runner.py
src/pawlette/rendering/: __init__.py  templates.py  themes.py
src/pawlette/schemas/: commands.py  config_struct.py  themes.py
src/pawlette/theming/: backup.py  gtk_applying.py  installer.py  manager.py  merge_copy.py  system_theme_appliers.py
src/schemas/: themes.py
src/theming/: backup.py  gtk_applying.py  manager.py  merge_copy.py  patch_engine.py
src/utils/: misc.py
tests/: conftest.py  test_color_extractor.py  test_comprehensive.py  test_plugin_runner.py  test_template_engine.py  test_theme_loader.py  test_xdg.py
