[project]
name = "pawlette"
version = "0.1.0"
description = "😺 Utility for changing themes in the meowrch"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
authors = [
  {name = "dimflix", email = "dimflix.official@gmail.com"},
]
maintainers = [
  {name = "dimflix", email = "dimflix.official@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "packaging>=24.2",
    "pydantic>=2.12.0,<3.0.0",
    "requests>=2.32.3",
    "systemd>=0.17.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/meowrch/pawlette"
Documentation = "https://github.com/meowrch/pawlette/wiki"
Repository = "https://github.com/meowrch/pawlette.git"
"Bug Tracker" = "https://github.com/meowrch/pawlette/issues"
Changelog = "https://github.com/meowrch/pawlette/blob/master/CHANGELOG.md"

[project.scripts]
pawlette = "pawlette.__main__:main"

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "vulture>=2.14",
]

[tool.uv]
package=true

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B404", "B603"]
tests = ["B102", "B101", "B301"]
