[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pawlette"
version = "2.0.0"
description = "Modern theme manager for linux with template engine and dynamic theming"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
authors = [
  {name = "dimflix", email = "dimflix.official@gmail.com"},
]
maintainers = [
  {name = "dimflix", email = "dimflix.official@gmail.com"},
]
dependencies = [
    "pillow>=12.1.1",
]

[project.urls]
Homepage = "https://github.com/meowrch/pawlette"
Documentation = "https://meowrch.github.io/en/meowrch-base/ecosystem/pawlette/pawlette/"
Repository = "https://github.com/meowrch/pawlette.git"
"Bug Tracker" = "https://github.com/meowrch/pawlette/issues"

[project.scripts]
pawlette = "pawlette.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pawlette"]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B404", "B603"]
tests = ["B102", "B101", "B301"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov",
    "ruff>=0.15.10",
    "vulture>=2.16",
]
